// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`agent-easy-track e2e tests should process tx with executed motion 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "EASY-TRACK-MOTION-ENACTED",
  "description": "EasyTrack motion 362 was enacted",
  "labels": Array [],
  "metadata": Object {
    "args": "362",
  },
  "name": "✅ EasyTrack: Motion executed",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-easy-track e2e tests should process tx with granted role 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "EASY-TRACK-ROLE-GRANTED",
  "description": "Role 0x0000000000000000000000000000000000000000000000000000000000000000 was granted to [0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d](https://etherscan.io/address/0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d) on EasyTrack contract by [0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d](https://etherscan.io/address/0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d)",
  "labels": Array [],
  "metadata": Object {
    "args": "0x0000000000000000000000000000000000000000000000000000000000000000,0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d,0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d",
  },
  "name": "🚨 EasyTrack: Role was granted on EasyTrack contract",
  "protocol": "ethereum",
  "severity": 5,
  "type": 4,
}
`;

exports[`agent-easy-track e2e tests should process tx with granted role on RewardProgramsRegistry 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "REWARD-PROGRAMS-REGISTRY-ROLE-GRANTED",
  "description": "Role 0x0000000000000000000000000000000000000000000000000000000000000000 was granted by [0x2e59A20f205bB85a89C53f1936454680651E618e](https://etherscan.io/address/0x2e59A20f205bB85a89C53f1936454680651E618e) on RewardProgramsRegistry by [0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d](https://etherscan.io/address/0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d)",
  "labels": Array [],
  "metadata": Object {
    "args": "0x0000000000000000000000000000000000000000000000000000000000000000,0x2e59A20f205bB85a89C53f1936454680651E618e,0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d",
  },
  "name": "🚨 EasyTrack: Role was granted on RewardProgramsRegistry",
  "protocol": "ethereum",
  "severity": 5,
  "type": 4,
}
`;

exports[`agent-easy-track e2e tests should process tx with new motion created 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "EASY-TRACK-MOTION-CREATED",
  "description": "Top up recipients (TRP LDO) motion [365](https://easytrack.lido.fi/motions/365) created by 0x834560F580764Bc2e0B16925F8bF229bb00cB759",
  "labels": Array [],
  "metadata": Object {
    "args": "365,0x834560F580764Bc2e0B16925F8bF229bb00cB759,0xBd2b6dC189EefD51B273F5cb2d99BA1ce565fb8C,0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000001000000000000000000000000834560f580764bc2e0b16925f8bf229bb00cb75900000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000096d0707a0aadf3200000,0x00000001231ac69a1a37649c6b06a71ab32ddd92158c80b800000024666712290000000000000000000000000000000000000000000096d0707a0aadf3200000b9e5cbb9ca5b0d659238807e84d0176930753d86000000c4f63648460000000000000000000000005a98fcbea516cf06857215779fd812ca3bef1b32000000000000000000000000834560f580764bc2e0b16925f8bf229bb00cb7590000000000000000000000000000000000000000000096d0707a0aadf32000000000000000000000000000000000000000000000000000000000000000000080000000000000000000000000000000000000000000000000000000000000001c4561737920547261636b3a20746f7020757020726563697069656e7400000000",
  },
  "name": "ℹ️ EasyTrack: New motion created",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-easy-track e2e tests should process tx with objected motion 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "EASY-TRACK-MOTION-OBJECTED",
  "description": "EasyTrack motion 351 was objected by [0x22c05930160c6a74a6bA59436e8F7006176ed104](https://etherscan.io/address/0x22c05930160c6a74a6bA59436e8F7006176ed104)",
  "labels": Array [],
  "metadata": Object {
    "args": "351,0x22c05930160c6a74a6bA59436e8F7006176ed104,10000000000000000000000,10000000000000000000000,0",
  },
  "name": "ℹ️ EasyTrack: Motion objected",
  "protocol": "ethereum",
  "severity": 1,
  "type": 4,
}
`;

exports[`agent-easy-track e2e tests should process tx with revoked role 1`] = `
Finding {
  "addresses": Array [],
  "alertId": "EASY-TRACK-ROLE-REVOKED",
  "description": "Role 0x9f959e00d95122f5cbd677010436cf273ef535b86b056afc172852144b9491d7 was revoked from [0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d](https://etherscan.io/address/0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d) on EasyTrack contract by [0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d](https://etherscan.io/address/0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d)",
  "labels": Array [],
  "metadata": Object {
    "args": "0x9f959e00d95122f5cbd677010436cf273ef535b86b056afc172852144b9491d7,0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d,0x2a61d3ba5030Ef471C74f612962c7367ECa3a62d",
  },
  "name": "🚨 EasyTrack: Role was revoked on EasyTrack contract",
  "protocol": "ethereum",
  "severity": 4,
  "type": 4,
}
`;
